Add partial verification of log entry along with a test